--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "eslint": "^8.19.0",
+    "eslint-plugin-react": "^7.30.1",
     "node-sass": "^7.0.1",
     "prop-types": "^15.6.0",
     "react": "^18.1.0",
