--- a/package.json
+++ b/package.json
@@ -46,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "taffydb": "^2.7.3",
+    "tui-jsdoc-template": "^1.2.2",
+    "underscore": "^1.13.4"
   }
 }
